--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,8 +4,7 @@
   assert:
     that:
       - application_name is defined
-      - cloudwatch_region is defined
-      - cloudwatch_log_group is defined
+      - loki_url is defined
       - discord_token is defined
       - mealie_token is defined
       - mealie_url is defined
@@ -17,11 +16,10 @@
     pull: true
     cleanup: true
     restart_policy: "always"
-    log_driver: "awslogs"
+    log_driver: "loki"
     log_options:
-      awslogs-region: "{{ cloudwatch_region }}"
-      awslogs-group: "{{ cloudwatch_log_group }}"
-      awslogs-stream: "{{ application_name }}"
+      loki-url: "{{ loki_url }}"
+      loki-batch-size: "400"
     env:
       DISCORD_TOKEN: "{{ discord_token }}"
       MEALIE_TOKEN: "{{ mealie_token }}"
